src/objects/ffr__ReportingLabel__c.object
<CustomObject>
    <customHelpPage>ffr__helpreportinglabel</customHelpPage>
    <fields>
        <fullName>ffr__ReportingDefinition__c</fullName>
        <label>Reporting Definition</label>
        <referenceTo>ffr__ReportingDefinition__c</referenceTo>
        <relationshipLabel>Reporting Labels</relationshipLabel>
        <relationshipName>ReportingLabels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__TemplateKey__c</fullName>
        <label>Template Key</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>L01</fullName>
                    <default>true</default>
                    <label>L01</label>
                </value>
                <value>
                    <fullName>L02</fullName>
                </value>
                <value>
                    <fullName>L03</fullName>
                </value>
                <value>
                    <fullName>L04</fullName>
                </value>
                <value>
                    <fullName>L05</fullName>
                </value>
                <value>
                    <fullName>L06</fullName>
                </value>
                <value>
                    <fullName>L07</fullName>
                </value>
                <value>
                    <fullName>L08</fullName>
                </value>
                <value>
                    <fullName>L09</fullName>
                </value>
                <value>
                    <fullName>L10</fullName>
                </value>
                <value>
                    <fullName>L11</fullName>
                </value>
                <value>
                    <fullName>L12</fullName>
                </value>
                <value>
                    <fullName>L13</fullName>
                </value>
                <value>
                    <fullName>L14</fullName>
                </value>
                <value>
                    <fullName>L15</fullName>
                </value>
                <value>
                    <fullName>L16</fullName>
                </value>
                <value>
                    <fullName>L17</fullName>
                </value>
                <value>
                    <fullName>L18</fullName>
                </value>
                <value>
                    <fullName>L19</fullName>
                </value>
                <value>
                    <fullName>L20</fullName>
                </value>
                <value>
                    <fullName>L21</fullName>
                </value>
                <value>
                    <fullName>L22</fullName>
                </value>
                <value>
                    <fullName>L23</fullName>
                </value>
                <value>
                    <fullName>L24</fullName>
                </value>
                <value>
                    <fullName>L25</fullName>
                </value>
                <value>
                    <fullName>L26</fullName>
                </value>
                <value>
                    <fullName>L27</fullName>
                </value>
                <value>
                    <fullName>L28</fullName>
                </value>
                <value>
                    <fullName>L29</fullName>
                </value>
                <value>
                    <fullName>L30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__Value__c</fullName>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <label>Reporting Label</label>
    <nameField>
        <label>Reporting Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Labels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>